--- a/src/index.html
+++ b/src/index.html
@@ -229,7 +229,7 @@
         <div class="col-12 offset-lg-1 col-lg-6">
           <p>A Silux é a unidade de negócios do Grupo Ecoquest responsável pela prestação de serviços de descontaminação de ambientes interiores.<br>
             Criada em maio de 2008, utiliza a tecnologia RCI para eliminar odores, gases voláteis, fumaça e até 99,99% de fungos e bactérias de locais fechados, e trata não só o ar, mas a superfície e os objetos que ali permanecem durante a descontaminação. No final de 2008, a Silux passou a atuar em locação mensal de equipamentos utilizados por hotéis, empresas imobiliárias e outros segmentos em todo o mundo para a remoção completa de odores, como o cigarro e o mofo dos quartos e salas.</p>
-          <a class="color--purple product__link" target="_blank" href="silux.com.br">Saiba Mais</a>
+          <a class="color--purple product__link" target="_blank" href="http://silux.com.br">Saiba Mais</a>
         </div>
       </div>
     </div>
@@ -332,6 +332,37 @@
     </div>
   </div>
 </footer>
+<div class="modal d-flex align-items-center justify-content-center">
+  <div class="container-fluid">
+    <div class="modal__close active">
+      <div class="icon">
+        <div class="bar1"></div>
+        <div class="bar2"></div>
+        <div class="bar3"></div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-12 offset-lg-1 col-lg-4 col-lg-4">
+        <h3 class="modal__title">Cadastre-se no nosso mailling para receber novidades sobre o Quiet Pure</h3>
+      </div>
+      <div class="col-12 offset-lg-1 col-lg-6">
+        <form class="modal__form">
+          <div class="input-group">
+            <label for="name">Seu nome (campo obrigatório)</label>
+            <input id="name" type="text" required>
+          </div>
+          <div class="input-group">
+            <label for="email">Seu e-mail (campo obrigatório)</label>
+            <input id="email" type="text" required>
+          </div>
+          <div class="input-group">
+            <button class="btn btn--green btn--uppercase" type="submit">enviar</button>
+          </div>
+        </form>
+      </div>
+    </div>
+  </div>
+</div>
 <script src="assets/js/scripts.min.js"></script>
 </body>
 </html>
