desktop breakpoints completed

--- a/src/index.html
+++ b/src/index.html
@@ -195,12 +195,12 @@
         <div class="col-12">
           <div class="card card--crop card--small bg--green">
             <div class="row justify-content-center ">
-              <div class="offset-lg-1 col-10 col-lg-6">
+              <div class="offset-lg-1 col-10 col-lg-6 offset-none">
                 <div class="product__image product__image--pad-none">
                   <img src="assets/img/quietpure-dimension.jpg" alt="">
                 </div>
               </div>
-              <div class="offset-lg-1 col-7 col-lg-4">
+              <div class="offset-0 offset-xl-1 col-7 col-lg-4 offset-none">
                 <div class="product__text-wrapper product__text-wrapper--dimension">
                   <h3>Especificações técnicas.</h3>
                   <p>Fluxo de ar: 160 CFM<br>
@@ -278,7 +278,7 @@
         </div>
       </div>
       <div class="row justify-content-center bg--purple">
-        <div class="col-10 col-lg-6">
+        <div class="col-10 col-lg-8 col-xl-6">
           <form class="product__form">
             <div class="input-group">
               <label for="name">Seu nome (campo obrigatório)</label>
