--- a/src/index.html
+++ b/src/index.html
@@ -181,7 +181,7 @@
               <p>Você não precisa ser especialista em engenharia e física para saber que a NASA trabalha nas condições mais extremas e isso pede as mais avançadas tecnologias. O sistema de purificação indoor do Quiet Pure é utilizado pelos astronautas num dos ambientes mais fechados que que existe: a estação espacial internacional.</p>
             </div>
             <div class="product__image">
-              <img src="assets/img/selo-nasa.jpg" alt="">
+              <img class="image-mobile" src="assets/img/selo-nasa.jpg" alt="">
             </div>
           </div>
         </div>
@@ -200,7 +200,7 @@
                   <img src="assets/img/quietpure-dimension.jpg" alt="">
                 </div>
               </div>
-              <div class="offset-0 offset-xl-1 col-7 col-lg-4 offset-none">
+              <div class="offset-0 offset-xl-1 col-7 col-sm-10 col-lg-4 offset-none">
                 <div class="product__text-wrapper product__text-wrapper--dimension">
                   <h3>Especificações técnicas.</h3>
                   <p>Fluxo de ar: 160 CFM<br>
@@ -223,7 +223,7 @@
       <div class="row justify-content-center align-items-center">
         <div class="col-12 offset-lg-1 col-lg-3">
           <div class="product__image product__image--pad-none">
-            <img src="assets/img/logo-silux.jpg" alt="">
+            <img class="image-mobile" src="assets/img/logo-silux.jpg" alt="">
           </div>
         </div>
         <div class="col-12 offset-lg-1 col-lg-6">
@@ -278,7 +278,7 @@
         </div>
       </div>
       <div class="row justify-content-center bg--purple">
-        <div class="col-10 col-lg-8 col-xl-6">
+        <div class="col-12 col-md-10 col-lg-8 col-xl-6">
           <form class="product__form">
             <div class="input-group">
               <label for="name">Seu nome (campo obrigatório)</label>
