adding questions to faq

--- a/src/index.html
+++ b/src/index.html
@@ -242,30 +242,54 @@
           <ul class="accordion">
             <li class="accordion__item">
               <div class="question">
-                Pergunta
+                O Quiet Pure é recomendável para quem:
               </div>
-              <div class="answer">Resposta</div>
+              <div class="answer">O purificador Quiet Pure é sugerido para as pessoas que sofrem com alergias e asma, são sensíveis à poeiras, animais de estimação e pólen.</div>
             </li>
             <li class="accordion__item">
               <div class="question">
-                Pergunta
+                Qual é a capacidade do Quiet Pure:
               </div>
-              <div class="answer">Resposta</div>
+              <div class="answer">O purificador Quiet Pure é capaz de melhorar a qualidade do ar em ambientes de até 23 m2.</div>
             </li>
             <li class="accordion__item">
               <div class="question">
-                Pergunta
+                Quais são as tecnologias utilizadas no Quiet Pure:
               </div>
-              <div class="answer">Resposta</div>
+              <div class="answer">São utilizadas a exclusiva tecnologia espacial ActivePure e a combinação da filtragem HEPA com carvão ativado</div>
             </li>
             <li class="accordion__item">
               <div class="question">
-                Pergunta
+                Qual é a garantia do equipamento:
               </div>
-              <div class="answer">Resposta</div>
+              <div class="answer">A garantia do purificador Quiet Pure é de 1 ano.</div>
+            </li>
+            <li class="accordion__item hidden">
+              <div class="question">
+                É necessário fazer alguma manutenção no equipamento:
+              </div>
+              <div class="answer">O filtro HEPA + carvão ativado deve ser trocado periodicamente. O equipamento avisa no painel quando chegar na hora da troca.</div>
+            </li>
+            <li class="accordion__item hidden">
+              <div class="question">
+                O Quiet Pure combate o mofo no ambiente:
+              </div>
+              <div class="answer">Sim, o purificador Quiet Pure combate o mofo, além de outros fungos, bactérias e até virus (estudos científicos comprovam a redução do vírus INFLUENZA nos ambientes)</div>
+            </li>
+            <li class="accordion__item hidden">
+              <div class="question">
+                Por que a tecnologia ActivePure, embarcada no Quiet Pure, foi certificada pela NASA:
+              </div>
+              <div class="answer">Essa tecnologia foi desenvolvida pela NASA e hoje é usada na estação espacial ISS. Por isso, recebe o pelo de Tecnologia Certificada Espacial, sendo a única no mundo a possuir tal validação.</div>
+            </li>
+            <li class="accordion__item hidden">
+              <div class="question">
+                Como devo usar o Quiet Pure:
+              </div>
+              <div class="answer">O equipamento deve ficar apoiado numa mesa de escritório, prateleira no quarto, no criado-mudo, ou seja, em alguma superfície mais alta dentro do ambiente. Nunca no chão. O equipamento deve ficar ligado 24 hs, diariamente.</div>
             </li>
           </ul>
-          <a href="#" class="see-more color--purple product__link">Veja mais</a>
+          <a href="#" id="seemore" class="see-more color--purple product__link">Veja mais</a>
         </div>
       </div>
     </div>
